--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+		    <artifactId>maven-surefire-plugin</artifactId>
+		    <configuration>
+		        <groups>fast</groups>
+		    </configuration>
+</plugin>
 		</plugins>
 	</build>
+
 
 </project>
